# vi-llm-pretraining

./: .gitignore  CLAUDE.md  Makefile  README.md  accelerate_config.yaml  accelerate_config_fsdp.yaml  pyproject.toml
.claude/commands/: add-dataset.md  debug-stage.md  implement-stage.md
configs/: cleaning.yaml  dataprep.yaml  datasets.yaml  tokenizer.yaml
configs/training/: 1b-smoke.yaml  1b.yaml  7b.yaml
scripts/: 01_download.py  02_clean.py  03_dedup.py  04_train_tokenizer.py  05_tokenize.py  06_train.py  07_infer.py
src/vi_llm/data/: cleaner.py  loader.py  utils.py
src/vi_llm/dataprep/: cleaner.py  converters.py  dedup.py  loader.py  packer.py
src/vi_llm/tokenizer/: train.py
src/vi_llm/training/: callbacks.py  infer.py  trainer.py
tests/: test_cleaner.py  test_dedup.py  test_packer.py  test_tokenizer.py
