[project]
name = "vi-llm-pretrain"
version = "0.1.0"
description = "Pre-training pipeline for a Vietnamese causal language model"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "transformers>=4.41",
    "accelerate>=0.30",
    "datasets>=2.19",
    "tokenizers>=0.19",
    "datasketch>=1.6",
    "fasttext-wheel>=0.9.2",
    "pyyaml>=6.0",
    "rich>=13.0",
    "wandb>=0.17",
    "huggingface_hub>=0.23",
    "pytest>=8.0",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.5"]         # CUDA only: uv pip install -e ".[flash]"
cuda  = ["deepspeed>=0.14"]         # Linux/CUDA only: uv pip install -e ".[cuda]"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vi_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
